--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -66,7 +66,7 @@
   <p>We may update this policy. We’ll post the new date above and, when material, provide a prominent notice.</p>
 
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:support@snowdrop.live">support@snowdrop.live</a> (replace with your contact if different)<br>
-     Controller: 〈Your Company/Name〉</p>
+  <p>Email: <a href="mailto:snowdropplive@gmail.com">snowdropplive@gmail.com/a><br>
+</p>
 </body>
 </html>
